--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@ DOCT<!YPE html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name - Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="portfolio.css">
 </head>
 
 <body>
@@ -43,11 +43,15 @@ DOCT<!YPE html>
             <h2>Projects</h2>
             <div class="project">
                 <h3>Project 1</h3>
-                <p>Description of Project 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>creating a user profile</p>
             </div>
             <div class="project">
                 <h3>Project 2</h3>
-                <p>Description of Project 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>creating homepage of Netflix.</p>
+            </div>
+            <div class="project">
+                <h4>Project 3</h4>
+                <p>creating weather website</p>
             </div>
             <!-- Add more projects as needed -->
         </div>
@@ -59,8 +63,8 @@ DOCT<!YPE html>
             <p>Feel free to reach out to me through the following channels:</p>
             <ul>
                 <li>Email: kethavathajay1434@gmail.com</li>
-                <li>LinkedIn: Kethavath Ajay.com</li>
-                <li>GitHub: github.com/Kethavathajay4/ajay.git</li>
+                <li>LinkedIn: https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3Bzs1mfLvbQyCQDouHeSUMzw%3D%3D</li>
+                <li>GitHub: https://github.com/ajaymac4</li>
             </ul>
         </div>
     </section>
